# pvr.hdhomerun

./: .gitignore  .travis.yml  CMakeLists.txt  Findhdhomerun.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  kodi-pvr-hdhomerun.install  rules
depends/common/hdhomerun/: 1.patch  CMakeLists.txt  hdhomerun.sha256  hdhomerun.txt
depends/common/jsoncpp/: jsoncpp.sha256  jsoncpp.txt
depends/common/rapidxml/: 0001-Win-compile.patch
pvr.hdhomerun/: README.md  addon.xml  addon.xml.in  changelog.txt
pvr.hdhomerun/resources/: settings.xml
pvr.hdhomerun/resources/language/English/: strings.po
pvr.hdhomerun/resources/language/resource.language.af_za/: strings.po
pvr.hdhomerun/resources/language/resource.language.am_et/: strings.po
pvr.hdhomerun/resources/language/resource.language.ar_sa/: strings.po
pvr.hdhomerun/resources/language/resource.language.ast_es/: strings.po
pvr.hdhomerun/resources/language/resource.language.az_az/: strings.po
pvr.hdhomerun/resources/language/resource.language.be_by/: strings.po
pvr.hdhomerun/resources/language/resource.language.bg_bg/: strings.po
pvr.hdhomerun/resources/language/resource.language.bs_ba/: strings.po
pvr.hdhomerun/resources/language/resource.language.ca_es/: strings.po
pvr.hdhomerun/resources/language/resource.language.cs_cz/: strings.po
pvr.hdhomerun/resources/language/resource.language.cy_gb/: strings.po
pvr.hdhomerun/resources/language/resource.language.da_dk/: strings.po
pvr.hdhomerun/resources/language/resource.language.de_de/: strings.po
pvr.hdhomerun/resources/language/resource.language.el_gr/: strings.po
pvr.hdhomerun/resources/language/resource.language.en_au/: strings.po
pvr.hdhomerun/resources/language/resource.language.en_gb/: strings.po
pvr.hdhomerun/resources/language/resource.language.en_nz/: strings.po
pvr.hdhomerun/resources/language/resource.language.en_us/: strings.po
pvr.hdhomerun/resources/language/resource.language.eo/: strings.po
pvr.hdhomerun/resources/language/resource.language.es_ar/: strings.po
pvr.hdhomerun/resources/language/resource.language.es_es/: strings.po
pvr.hdhomerun/resources/language/resource.language.es_mx/: strings.po
pvr.hdhomerun/resources/language/resource.language.et_ee/: strings.po
pvr.hdhomerun/resources/language/resource.language.eu_es/: strings.po
pvr.hdhomerun/resources/language/resource.language.fa_af/: strings.po
pvr.hdhomerun/resources/language/resource.language.fa_ir/: strings.po
pvr.hdhomerun/resources/language/resource.language.fi_fi/: strings.po
pvr.hdhomerun/resources/language/resource.language.fo_fo/: strings.po
pvr.hdhomerun/resources/language/resource.language.fr_ca/: strings.po
pvr.hdhomerun/resources/language/resource.language.fr_fr/: strings.po
pvr.hdhomerun/resources/language/resource.language.gl_es/: strings.po
pvr.hdhomerun/resources/language/resource.language.he_il/: strings.po
pvr.hdhomerun/resources/language/resource.language.hi_in/: strings.po
pvr.hdhomerun/resources/language/resource.language.hr_hr/: strings.po
pvr.hdhomerun/resources/language/resource.language.hu_hu/: strings.po
pvr.hdhomerun/resources/language/resource.language.hy_am/: strings.po
pvr.hdhomerun/resources/language/resource.language.id_id/: strings.po
pvr.hdhomerun/resources/language/resource.language.is_is/: strings.po
pvr.hdhomerun/resources/language/resource.language.it_it/: strings.po
pvr.hdhomerun/resources/language/resource.language.ja_jp/: strings.po
pvr.hdhomerun/resources/language/resource.language.ko_kr/: strings.po
src/: EPG.cpp  EPG.h  EPG_SD.cpp  EPG_SD.h  EPG_XML.cpp  EPG_XML.h  Epg.cpp  Epg.h  EpgChannel.cpp  EpgChannel.h  EpgEntry.cpp  EpgEntry.h  HDHomeRunTuners.cpp  HDHomeRunTuners.h  HDRecorder.cpp  HDRecorder.h  HDRecorderJob.cpp  HDRecorderJob.h  HDRecorderScheduler.cpp  HDRecorderScheduler.h  HDRecorderThread.cpp  HDRecorderThread.h  HDRecorderUtils.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h  client.cpp  client.h
(+34 files in other folders)
